cabal-version: 2.4
name:          bigmoon-haskellers-blog
version:       0.1.0.0
description:   BIGMOON HASKELLER'S BLOG
author:        Shinya Yamaguchi
maintainer:    Shinya Yamaguchi
tested-with:   GHC ==8.8.3 || ==8.10.1

executable site
  main-is:            site.hs
  hs-source-dirs:     app
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs
    -fwrite-ide-info -hiedir=.hie

  build-depends:
    , base           ^>=4.13 || ^>=4.14
    , extensible     ^>=0.8
    , hakyll         ^>=4.13
    , hakyll-sass    ^>=0.3
    , html-entities  ^>=1.1
    , rio            ^>=0.1
    , yaml           ^>=0.11

  other-modules:
    Config
    Hakyll.Ext
    Paths_bigmoon_haskellers_blog

  default-extensions:
    NoImplicitPrelude
    DataKinds
    LambdaCase
    OverloadedLabels
    TypeApplications
    TypeOperators

  default-language:   Haskell2010
