cabal-version: 2.4
name:          bigmoon-haskellers-blog
version:       0.1.0.0
description:   BIGMOON HASKELLER'S BLOG
author:        Shinya Yamaguchi
maintainer:    Shinya Yamaguchi
tested-with:   GHC ==8.8.4 || ==8.10.4

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

executable site
  main-is:            site.hs
  hs-source-dirs:     app
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs -fwrite-ide-info -hiedir=.hie -O2

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  if flag(pedantic)
    ghc-options: -Werror

  build-depends:
    , base           >=4.13 && <4.15
    , extensible     ^>=0.8
    , hakyll         ^>=4.13
    , hakyll-sass    ^>=0.3
    , html-entities  ^>=1.1
    , rio            ^>=0.1
    , yaml           ^>=0.11

  other-modules:
    Config
    Hakyll.Ext
    Paths_bigmoon_haskellers_blog

  default-extensions:
    NoImplicitPrelude
    DataKinds
    LambdaCase
    OverloadedLabels
    TypeApplications
    TypeOperators

  default-language:   Haskell2010
