cabal-version: 1.12
name:          haskell-blog
version:       0.1.0.0
description:   BIGMOON HASKELLER'S BLOG
author:        Shinya Yamaguchi
maintainer:    Shinya Yamaguchi
license:       AllRightsReserved
build-type:    Simple

executable site
  main-is:          site.hs
  other-modules:
    Config
    Hakyll.Ext
    Paths_haskell_blog

  hs-source-dirs:   app
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs -threaded

  build-depends:
      base
    , blaze-html
    , bytestring
    , conduit-combinators
    , containers
    , extensible
    , filepath
    , hakyll
    , lens
    , mtl
    , stm
    , time
    , yaml

  if !os(windows)
    build-depends: hakyll-sass

  default-language: Haskell2010
